# aster

./: .dockerignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  artifact_manifest.txt
.github/workflows/: ci.yml
crates/broker/: Cargo.toml
crates/broker/src/: lib.rs  store.rs
crates/capsule/: Cargo.toml
crates/capsule/src/: lib.rs  seal.rs
crates/convex-codec/: Cargo.toml
crates/convex-codec/examples/: idv6_smoke_helper.rs
crates/convex-codec/src/: base32.rs  idv6.rs  lib.rs  value.rs
crates/host/: Cargo.toml
crates/host/src/: lib.rs
crates/host/tests/: broker_boundary.rs  crypto_and_v8.rs  e2e.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: bundle.rs  lib.rs
crates/ipc/tests/: process_boundary.rs
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs
crates/store-postgres/: Cargo.toml
crates/store-postgres/src/: lib.rs  module_index.rs  modules_storage.rs  table_mapping.rs
crates/store-postgres/tests/: postgres_it.rs
crates/store-postgres/tests/fixtures/: schema.sql  seed.sql
crates/v8cell/: Cargo.toml
crates/v8cell/src/: lib.rs
crates/v8cell/tests/: module_loader.rs
crates/v8cell/tests/fixtures/: messages.bundled.js
docker/: Dockerfile  compose.smoke.yml  smoke-bundle.sh  smoke-postgres.sh  smoke.sh
docker/tenant/: main.js
docs/: ABSURD_IDEAS.md  ARCHITECTURE.md  ARCHITECTURE_V0.2.md  ARCHITECTURE_V0.3.md  COMPARISON_MATRIX_V0.2.md  COMPARISON_MATRIX_V0.3.md  CONVEX_POSTGRES_REFERENCE.md  FIRST_200_LINES.rs  FIRST_200_LINES_numbered.txt  LOCAL_VALIDATION.md  POSTGRES_ADAPTER_PLAN.md  SYNAPSE_MIGRATION_V0.2.md  SYNAPSE_MIGRATION_V0.3.md  THEORY_REGISTER.md  V8_QUESTION.md  apt_update.txt  architecture_word_count.txt  bench_results.md  bench_results_v0.2.json  bench_results_v0.2.stderr  bench_results_v0.3.json  bench_results_v0.3.stderr  cargo_build_v0.3.txt  cargo_test_v0.2.txt  cargo_test_v0.3.txt  ipc_manual_run_v0.3.txt  ipc_process_e2e_v0.3.txt  protoc_v0.2.txt  protoc_v0.3.txt  python_mirror_bench.json  static_check.txt  toolchain_check.txt  toolchain_check_v0.2.txt  toolchain_check_v0.3.txt
proto/: aster.proto
scripts/: mirror_bench.py  static_check.py
