[workspace]
members = [
    "crates/capsule",
    "crates/runner",
    "crates/broker",
    "crates/ipc",
    "crates/host",
    "crates/v8cell",
    "crates/store-postgres",
    "crates/convex-codec",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Iann29/aster"
rust-version = "1.75"
