[package]
name = "aster-convex-codec"
version = "0.5.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Convex IDv6 + Crockford base32 codec, ported verbatim from get-convex/convex-backend so Aster can decode IDs that Convex apps emit."

[dependencies]
# Pure Rust port — no convex-backend types, no thiserror. The whole
# crate is std-only so it stays cell-safe (no transitive surprises).
