[package]
name = "aster-ipc"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aster-broker = { path = "../broker" }
aster-capsule = { path = "../capsule" }
aster-v8cell = { path = "../v8cell" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
