[package]
name = "aster-ipc"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aster-broker = { path = "../broker" }
aster-capsule = { path = "../capsule" }
aster-v8cell = { path = "../v8cell" }
base64 = "0.22"
# aster-store-postgres is linked unconditionally — the binary picks at
# runtime based on ASTER_STORE. This drags tokio-postgres into the cell
# binary too (which never uses it), but the alternative (cargo features)
# would force per-target builds and double the docker/smoke surface.
# Dead-code elim removes the unused symbols from aster_v8cell at link.
aster-store-postgres = { path = "../store-postgres" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Convex emits per-source-package bundles as ZIP archives (one entry
# per module path plus its source map). The v8cell binary unpacks one
# named entry on the way into V8. Reader-only path with deflate cover
# Convex's emitted compression; we explicitly disable other features
# to keep the crate's dep surface narrow.
zip = { version = "2", default-features = false, features = ["deflate"] }
