[package]
name = "aster-v8cell"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aster-broker = { path = "../broker" }
aster-capsule = { path = "../capsule" }
v8 = "0.106"
# serde_json parses the JSON payload Convex.asyncSyscall hands across
# the V8 boundary (e.g. the `{id}` arg of "1.0/get") and serialises the
# document back into a JSON string the JS side can `JSON.parse`.
serde_json = "1"
